feature(backend): initial setup for backend with folder structure and connceted to local XAMPP

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=IT342_G4_Siton_Lab1
+
+# MySQL datasource (XAMPP local)
+spring.datasource.url=jdbc:mysql://localhost:3306/IT342_G4_Siton_Lab1?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Server port (optional)
+# server.port=8080
