--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,5 +10,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Server port (optional)
-# server.port=8080
+# Server Configuration
+server.port=8080
+server.address=0.0.0.0
